# msdocs-todo-python-fastapi-postgres-aca

./: README.md  azure.yaml
infra/: main.bicep  main.parameters.json
src/api/: pyproject.toml  requirements.txt
src/api/todo/: app.py
